--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/lamudi/392cd70c-b03b-413e-b8ca-3d0b7cb1df48'>Lamudi - Data Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://cloudacademy.workable.com/j/EF70997CAB'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/113134/jobs/4369946002'>Job Application for Sr. Data Engineer  at Cast & Crew Entertainment Services, LLC</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -146,7 +154,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nike.referrals.selectminds.com/jobs/junior-data-engineer-50452'>Junior Data Engineer - NIKE, Inc. Careers</a></h5> 
+<h5><a href='https://nike.referrals.selectminds.com/jobs/junior-data-engineer-50452'>Junior Data Engineer - NIKE, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -238,7 +246,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/7b248d7f-5f6c-4558-8368-18c14b2eebde'>Ancestry - Data Engineer ? Enterprise Data Management / DNA Operations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/7b248d7f-5f6c-4558-8368-18c14b2eebde'>Ancestry - Data Engineer ? Enterprise Data Management / DNA Operations</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -268,7 +276,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">Atlanta California</span></p>
 <p>Posted on:: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/259453-data-engineer'>Job @ talpasolutions (Essen): Data Engineer | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/259453-data-engineer'>Job @ talpasolutions (Essen): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -283,7 +291,7 @@ not subject you to adverse treatment). Our company values diversity.</p>
 transportation and urban planning to help the world better deploy infrastructure 
 and adapt?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pointclickcare/f5893252-17f7-45a3-ba56-464a6d257584/apply'>PointClickCare - Data Engineers - All Seniority Levels (Toronto Office)</a></h5> 
+<h5><a href='https://jobs.lever.co/pointclickcare/f5893252-17f7-45a3-ba56-464a6d257584/apply'>PointClickCare - Data Engineers - All Seniority Levels (Toronto Office)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Engineers - All Seniority Levels (Toronto Office). Toronto, Ontario. 
 Engineering. Full-Time. Submit your application. LinkedIn profile. Loading. Apply 
@@ -308,11 +316,11 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Hillsboro, OR, USA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/496FE25330'>Aginic - Jobs: Data Engineer (Melbourne) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/496FE25330'>Aginic - Jobs: Data Engineer (Melbourne) - Apply online</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/C358FBC756'>Aginic - Jobs: Data Engineer (Sydney) - Apply online</a></h5> 
+<h5><a href='https://aginic.workable.com/j/C358FBC756'>Aginic - Jobs: Data Engineer (Sydney) - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -389,13 +397,13 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-data-engineer-12973'>Senior Data Engineer - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-data-engineer-12973'>Senior Data Engineer - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... You'll be using modern, scalable technologies to support the expansion of 
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -421,7 +429,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p>1 day ago ... At Hulu, data is essential for all our decision-making needs whether it's related to 
 product design, measuring advertising effectiveness, helping users discover?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/intapp/job/ofMW9fwQ'>Intapp Careers - Senior Data Engineer/Lead</a></h5> 
+<h5><a href='http://jobs.jobvite.com/intapp/job/ofMW9fwQ'>Intapp Careers - Senior Data Engineer/Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>22 hours ago ... Description. Senior Data Engineer/Lead: Our culture favors doers, innovators and 
 disruptors. We are growing, we get things done, and we are always looking for?...</p>
@@ -465,16 +473,8 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/mattermost/b1fb3f8c-3151-41be-9135-499120ef680b'>Mattermost - Data Engineer (Remote)</a></h5> 
-<p><span class="badge badge-light">Berlin</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
